--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4             NaN         NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,8 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,12 +162,34 @@
     }
    ],
    "source": [
-    "covid_ages.info()"
+    "covid_ages.info()\n",
+    "#1235 rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0-17', '18-49', '50-64', '65 and Older', 'Unknown', '65+',\n",
+       "       'Missing'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covid_ages['age_group'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -265,7 +289,7 @@
        "4               3  2020-03-22  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +325,8 @@
     }
    ],
    "source": [
-    "covid_cases.info()"
+    "covid_cases.info()\n",
+    "#15665 rows"
    ]
   },
   {
@@ -311,12 +336,13 @@
     "Notes about what is observed from the data:\n",
     "\n",
     "- Both have the same Date Format, which is YYYY/MM/DD Time, so we can potentially join on date\n",
-    "- The covid_cases is sorted by date and grouped by county, but the covid_ages doesn't show us the counties. We would need to sum totalcountconfirmed in covid_cases grouped by dates before joining and comparing the proportions; We will also probably need to do that for the age groups..."
+    "- The covid_cases is sorted by date and grouped by county, but the covid_ages doesn't show us the counties. We would need to sum totalcountconfirmed in covid_cases grouped by dates before joining and comparing the proportions; We will also probably need to do that for the age groups...\n",
+    "- Unknown and missing age group in covid_ages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +363,7 @@
        "Name: totalcountconfirmed, Length: 262, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,43 +375,438 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "age_group  date      \n",
-       "0-17       2020-04-02    120\n",
-       "           2020-04-03    137\n",
-       "           2020-04-04    160\n",
-       "           2020-04-05    173\n",
-       "           2020-04-06    197\n",
-       "                        ... \n",
-       "Unknown    2020-05-27    155\n",
-       "           2020-05-28    159\n",
-       "           2020-05-29    169\n",
-       "           2020-05-30    172\n",
-       "           2020-05-31    177\n",
+       "date        age_group   \n",
+       "2020-04-02  0-17               120\n",
+       "            18-49             5302\n",
+       "            50-64             2879\n",
+       "            65 and Older      2342\n",
+       "            Unknown             58\n",
+       "                             ...  \n",
+       "2020-12-04  0-17            147807\n",
+       "            18-49           780365\n",
+       "            50-64           246393\n",
+       "            65+             135981\n",
+       "            Missing           1079\n",
        "Name: totalpositive, Length: 1235, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped_covid_ages = covid_ages.groupby(['age_group','date'])['totalpositive'].sum()\n",
+    "grouped_covid_ages = covid_ages.groupby(['date','age_group'])['totalpositive'].sum()\n",
     "grouped_covid_ages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# change grouped series to dataframe and reset index to get\n",
+    "# age group and date out of index\n",
+    "grouped_covid_ages = grouped_covid_ages.to_frame()\n",
+    "grouped_covid_ages = grouped_covid_ages.reset_index()\n",
+    "grouped_covid_cases = grouped_covid_cases.to_frame()\n",
+    "grouped_covid_cases = grouped_covid_cases.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>totalpositive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>18-49</td>\n",
+       "      <td>5302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>50-64</td>\n",
+       "      <td>2879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>65 and Older</td>\n",
+       "      <td>2342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1230</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>147807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1231</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>18-49</td>\n",
+       "      <td>780365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1232</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>50-64</td>\n",
+       "      <td>246393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1233</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>65+</td>\n",
+       "      <td>135981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>1079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1235 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date     age_group  totalpositive\n",
+       "0     2020-04-02          0-17            120\n",
+       "1     2020-04-02         18-49           5302\n",
+       "2     2020-04-02         50-64           2879\n",
+       "3     2020-04-02  65 and Older           2342\n",
+       "4     2020-04-02       Unknown             58\n",
+       "...          ...           ...            ...\n",
+       "1230  2020-12-04          0-17         147807\n",
+       "1231  2020-12-04         18-49         780365\n",
+       "1232  2020-12-04         50-64         246393\n",
+       "1233  2020-12-04           65+         135981\n",
+       "1234  2020-12-04       Missing           1079\n",
+       "\n",
+       "[1235 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_covid_ages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>totalcountconfirmed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>675.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>1006.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>1224.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>1468.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-22</td>\n",
+       "      <td>1733.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>2020-11-30</td>\n",
+       "      <td>1225189.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>2020-12-01</td>\n",
+       "      <td>1245948.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>2020-12-02</td>\n",
+       "      <td>1264539.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>2020-12-03</td>\n",
+       "      <td>1286557.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>262 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  totalcountconfirmed\n",
+       "0    2020-03-18                675.0\n",
+       "1    2020-03-19               1006.0\n",
+       "2    2020-03-20               1224.0\n",
+       "3    2020-03-21               1468.0\n",
+       "4    2020-03-22               1733.0\n",
+       "..          ...                  ...\n",
+       "257  2020-11-30            1225189.0\n",
+       "258  2020-12-01            1245948.0\n",
+       "259  2020-12-02            1264539.0\n",
+       "260  2020-12-03            1286557.0\n",
+       "261  2020-12-04            1311625.0\n",
+       "\n",
+       "[262 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_covid_cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>totalpositive</th>\n",
+       "      <th>totalcountconfirmed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>120</td>\n",
+       "      <td>10701.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>18-49</td>\n",
+       "      <td>5302</td>\n",
+       "      <td>10701.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>50-64</td>\n",
+       "      <td>2879</td>\n",
+       "      <td>10701.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>65 and Older</td>\n",
+       "      <td>2342</td>\n",
+       "      <td>10701.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>58</td>\n",
+       "      <td>10701.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1230</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>147807</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1231</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>18-49</td>\n",
+       "      <td>780365</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1232</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>50-64</td>\n",
+       "      <td>246393</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1233</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>65+</td>\n",
+       "      <td>135981</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>2020-12-04</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>1079</td>\n",
+       "      <td>1311625.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1235 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date     age_group  totalpositive  totalcountconfirmed\n",
+       "0     2020-04-02          0-17            120              10701.0\n",
+       "1     2020-04-02         18-49           5302              10701.0\n",
+       "2     2020-04-02         50-64           2879              10701.0\n",
+       "3     2020-04-02  65 and Older           2342              10701.0\n",
+       "4     2020-04-02       Unknown             58              10701.0\n",
+       "...          ...           ...            ...                  ...\n",
+       "1230  2020-12-04          0-17         147807            1311625.0\n",
+       "1231  2020-12-04         18-49         780365            1311625.0\n",
+       "1232  2020-12-04         50-64         246393            1311625.0\n",
+       "1233  2020-12-04           65+         135981            1311625.0\n",
+       "1234  2020-12-04       Missing           1079            1311625.0\n",
+       "\n",
+       "[1235 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join the dataframes\n",
+    "pd.merge(grouped_covid_ages, grouped_covid_cases)"
+   ]
   },
   {
    "cell_type": "code",
