--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -4684,26 +4684,66 @@
     "\n",
     "$\\chi^2 = \\sum \\frac{(O - E)^2}{E}$\n",
     "\n",
-    "$H_0$: The positive percentage for each age group in CA is equal to the positive percentage for each age group in the US\n",
+    "$H_0$: The positive case percentage for each age group in CA is equal to the positive case percentage for each age group in the US\n",
     "\n",
-    "$H_0: p_1 = 10.3, p_2 = 54.8, p_3 = 20.5, p_4 = 14.4$\n",
+    "$H_0: p_1 = 0.10131, p_2 = 0.53916, p_3 = 0.20186, p_4 = 0.14217, p_5 = 0.00538$\n",
     "\n",
     "* $p_1$ is positive percentage for 0-17 in US\n",
     "* $p_2$ is positive percentage for 18-49 in US\n",
-    "* $p_3$ is positive percentage for 50-64 in US, and \n",
-    "* $p_4$ is positive percentage for 65 and older in US\n",
+    "* $p_3$ is positive percentage for 50-64 in US, \n",
+    "* $p_4$ is positive percentage for 65 and older in US, and\n",
+    "* $p_5$ is positive percentage for missing in US\n",
     "\n",
     "$H_a$: The positive percentage for each age group in CA is not equal to the positive percentage for each age group in the US"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Chi-squared test - Goodness of Fit\n",
-    "# Null is expected proportions of all the groups"
+    "# Total positive count in CA\n",
+    "CA_total_pos = float(covid_df['totalcountconfirmed'].iloc[-1])\n",
+    "\n",
+    "# Create expected list; Make sure to round to nearest whole number\n",
+    "expected = []\n",
+    "for c in range(5):\n",
+    "    expected.append(round(us_age_percents['Positive Percentage'].iloc[c]*CA_total_pos))\n",
+    "\n",
+    "# Change list to series\n",
+    "expected_ca = pd.Series(expected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create observed list by slicing (last 5 rows)\n",
+    "observed_ca = covid_df['totalpositive'].iloc[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=41586.96638522837, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chisquare(observed_ca, expected_ca)"
    ]
   },
   {
