Finished Hypothesis Testing

--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -4718,32 +4718,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create observed list by slicing (last 5 rows)\n",
-    "observed_ca = covid_df['totalpositive'].iloc[-5:]"
+    "observed_ca = covid_df['positive_age_proportion'].iloc[-5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Power_divergenceResult(statistic=41586.96638522837, pvalue=0.0)"
+       "Power_divergenceResult(statistic=1705920.0000006002, pvalue=0.0)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.chisquare(observed_ca, expected_ca)"
+    "stats.chisquare(observed_ca, expected_ca)\n",
+    "# P-value of 0. Reject the null that the positive case percentage for each age group in CA is equal to \n",
+    "# the positive case percenntage for each age group in US"
    ]
   },
   {
