--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -1259,39 +1259,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Delete missing data from total\n",
-    "# # Create DF with just the missing age group and merge with\n",
-    "# # grouped_covid_cases on date\n",
-    "# missing = grouped_covid_ages[grouped_covid_ages['age_group']=='Missing']\n",
-    "# delete = pd.merge(missing, grouped_covid_cases)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# delete['totalconfirmed'] = delete['totalcountconfirmed'] - delete['totalpositive']\n",
-    "# delete['newconfirmedcount'] = delete['newcountconfirmed'] - delete['totalpositive']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new = pd.merge(delete, grouped_covid_cases)\n",
-    "# new"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -1606,7 +1573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CA population (2019) data from https://censusreporter.org/data/table/?table=B01001&primary_geo_id=04000US06&geo_ids=04000US06,01000US"
+    "CA population (2019) data from https://censusreporter.org/data/table/?table=B01001&geo_ids=04000US06,01000US&primary_geo_id=04000US06#valueType|estimate"
    ]
   },
   {
@@ -2655,7 +2622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under 17 age group data frfom: https://www.kidsdata.org/topic/34/child-population-age-gender/table#fmt=141&loc=2&tf=110&ch=1433,926,927,1434,1435,372,78,77,79&sortColumnId=0&sortType=asc"
+    "Under 17 age group data from: https://www.kidsdata.org/topic/34/child-population-age-gender/table#fmt=141&loc=2&tf=110&ch=1433,926,927,1434,1435,372,78,77,79&sortColumnId=0&sortType=asc"
    ]
   },
   {
