Added more images

--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -4776,6 +4776,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th>Observed in California</th>\n",
+       "      <th>Expected in California</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>0-17</td>\n",
+       "      <td>208045</td>\n",
+       "      <td>181748.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>18-49</td>\n",
+       "      <td>1043558</td>\n",
+       "      <td>960402.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>50-64</td>\n",
+       "      <td>331246</td>\n",
+       "      <td>359721.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>65 and Older</td>\n",
+       "      <td>180273</td>\n",
+       "      <td>252994.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>Missing</td>\n",
+       "      <td>1252</td>\n",
+       "      <td>9528.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Age Group  Observed in California  Expected in California\n",
+       "1295          0-17                  208045                181748.0\n",
+       "1296         18-49                 1043558                960402.0\n",
+       "1297         50-64                  331246                359721.0\n",
+       "1298  65 and Older                  180273                252994.0\n",
+       "1299       Missing                    1252                  9528.0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'Age Group': age_groups, 'Observed in California':observed_ca, 'Expected in California': expected})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
