Data done in ReadMe

--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -2612,7 +2612,7 @@
    ],
    "source": [
     "# Merge the age groups to reflect the age groups in Covid data\n",
-    "# Age groups for Covid: 0-17, 18-49, 50-64, 65 and Older, Unknown, Missing\n",
+    "# Age groups for Covid: 0-17, 18-49, 50-64, 65 and Older, Missing\n",
     "until_19 = ca_population[0:4]['Total Estimate'].sum()\n",
     "from_20_49 = ca_population[4:10]['Total Estimate'].sum()\n",
     "from_50_64 = ca_population[10:13]['Total Estimate'].sum()\n",
