--- a/Covid_EDA.ipynb
+++ b/Covid_EDA.ipynb
@@ -4391,18 +4391,18 @@
    "metadata": {},
    "source": [
     "### Important Dates:\n",
-    "- March 19th - statewide SIP (2 weeks later - April 2)\n",
-    "- May 13 - LA beaches reopen (2 weeks later - May 27)\n",
-    "- May 18 - Newsom changes reopening parameters (more eased) (2 weeks later - June 1)\n",
-    "- June 12 - indoor businesses like restaurants, retail stores, bars, gyms, and religious services reopen (2 weeks later - June 26)\n",
-    "- July 13 - bars and indoor dining closed again (some counties close gyms, churches, hair salons, etc) (2 weeks later - July 27)\n",
-    "- September 22 - nail salons and salons reopen (2 weeks later - October 6)\n",
-    "- October 23 - State allows nursing home visitors (2 weeks later - November 6)\n",
-    "- October 28 - San Mateo gyms increase capacity from 10% to 25% (2 weeks later - November 11)\n",
-    "- November 16 - Nonessential businnesses close and Californians must wear a mask whenever outside their house (2 weeks later - November 30)\n",
-    "- November 21 - Statewide curfew implemented until December 21 (2 weeks later - December 5)\n",
-    "- November 27 - LA County imposes new stay-at-home order (2 weeks later - December 11)\n",
-    "- December 6 - Bay Area (as well as most counties in California) impose new stay-at-home order (2 weeks later - December 20)"
+    "- March 19th - statewide SIP (2 weeks later - **April 2**)\n",
+    "- May 13 - LA beaches reopen (2 weeks later - **May 27**)\n",
+    "- May 18 - Newsom changes reopening parameters, more eased (2 weeks later - **June 1**)\n",
+    "- June 12 - indoor businesses like restaurants, retail stores, bars, gyms, and religious services reopen (2 weeks later - **June 26**)\n",
+    "- July 13 - bars and indoor dining closed again; some counties close gyms, churches, hair salons, etc. (2 weeks later - **July 27**)\n",
+    "- September 22 - nail salons and salons reopen (2 weeks later - **October 6**)\n",
+    "- October 23 - State allows nursing home visitors (2 weeks later - **November 6**)\n",
+    "- October 28 - San Mateo gyms increase capacity from 10% to 25% (2 weeks later - **November 11**)\n",
+    "- November 16 - Nonessential businnesses close and Californians must wear a mask whenever outside their house (2 weeks later - **November 30**)\n",
+    "- November 21 - Statewide curfew implemented until December 21 (2 weeks later - **December 5**)\n",
+    "- November 27 - LA County imposes new stay-at-home order (2 weeks later - **December 11**)\n",
+    "- December 6 - Bay Area (as well as most counties in California) impose new stay-at-home order (2 weeks later - **December 20**)"
    ]
   },
   {
